# emg-autoresearch

./: .gitignore  README.md  best_results.json  continuous_autoresearch.py  dataset_description.txt  emg_final_pipeline.ipynb  prepare.py  program.md  pyproject.toml  train.py
artifacts/: README.md  experiment_history.jsonl  final_metrics.json
data/: README.md
notebooks/: final_pipeline.ipynb
tests/: test_emg_pipeline.py
