[project]
name = "emg-gesture-classification"
version = "0.1.0"
description = "Public EMG gesture classification project with reproducible training pipeline and final model artifacts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.18.1",
    "ipykernel>=6.29.5",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
